<resources>
    <string name="app_name">PokeDex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_logo_narration">This is Pokemon Logo</string>
    <string name="narration_pokemon_image">This is Pokemon Image</string>
    <string name="pokemon_weight_value">%s KG</string>
    <string name="pokemon_height_value">%s M</string>
    <string name="base_stats">BASE STATS</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="hp">HP</string>
    <string name="exp">EXP</string>
    <string name="spd">SPD</string>
    <string name="def">DEF</string>
    <string name="atk">ATK</string>
</resources>