<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fatherConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background800"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:fitsSystemWindows="true"
            android:background="@drawable/custom_ctr_bg"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:background="@drawable/custom_ctr_bg"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed" >

                <ImageView
                    android:id="@+id/imgPokemon"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/narration_pokemon_image"
                    android:layout_marginTop="15dp"
                    android:scaleType="fitCenter"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat"
                    android:translationZ="-200dp"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bg"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvPokemonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pokemonType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/pokemon_type_bg"
                    android:paddingStart="32dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPokemonName" />

                <TextView
                    android:id="@+id/pokemonWeightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/pokemonHeightValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemonType"
                    tools:text="@string/pokemon_weight_value" />

                <TextView
                    android:id="@+id/pokemonHeightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pokemonWeightValue"
                    app:layout_constraintTop_toBottomOf="@id/pokemonType"
                    tools:text="@string/pokemon_height_value" />

                <TextView
                    android:id="@+id/pokemonWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/weight"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@+id/pokemonWeightValue"
                    app:layout_constraintStart_toStartOf="@+id/pokemonWeightValue"
                    app:layout_constraintTop_toBottomOf="@+id/pokemonWeightValue" />

                <TextView
                    android:id="@+id/pokemonHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/height"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@+id/pokemonHeightValue"
                    app:layout_constraintStart_toStartOf="@+id/pokemonHeightValue"
                    app:layout_constraintTop_toBottomOf="@id/pokemonHeightValue" />

                <TextView
                    android:id="@+id/tvBaseStats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/base_stats"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemonHeight" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/pvHp"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:progressView_radius="12dp"
                    app:progressView_labelColorInner="@color/white"
                    app:progressView_labelSize="13sp"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/md_orange_200"
                    app:progressView_progress="70"
                    app:progressView_min="50"
                    app:progressView_max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBaseStats" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/pvAtk"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:progressView_radius="12dp"
                    app:progressView_labelColorInner="@color/black"
                    app:progressView_labelSize="13sp"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/yellow"
                    app:progressView_progress="70"
                    app:progressView_min="50"
                    app:progressView_max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pvHp" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/pvDef"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:progressView_radius="12dp"
                    app:progressView_labelColorInner="@color/white"
                    app:progressView_labelSize="13sp"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/skyBlue"
                    app:progressView_progress="70"
                    app:progressView_min="50"
                    app:progressView_max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pvAtk" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/pvSpd"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:progressView_radius="12dp"
                    app:progressView_labelColorInner="@color/white"
                    app:progressView_labelSize="13sp"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/steel"
                    app:progressView_progress="70"
                    app:progressView_min="50"
                    app:progressView_max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pvDef" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/pvExp"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:progressView_radius="12dp"
                    app:progressView_labelColorInner="@color/white"
                    app:progressView_labelSize="13sp"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/md_green_100"
                    app:progressView_progress="70"
                    app:progressView_min="50"
                    app:progressView_max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pvSpd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="55dp"/>

                <ProgressBar
                    android:id="@+id/loadingIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>